--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "release-dry": "unbag release -d",
     "test": "vitest",
     "test-watch": " vitest -w",
-    "test-read": "tsx ./src/cli"
+    "test-read": "tsx ./src/cli",
+    "commit": "commit",
+    "prepare": "husky"
   },
   "exports": {
     ".": {
@@ -57,7 +59,12 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.25.7",
+    "@commitlint/cli": "^19.4.0",
+    "@commitlint/config-conventional": "^19.4.0",
+    "@commitlint/prompt-cli": "19.4.1",
+    "@commitlint/types": "^19.4.0",
     "babel-plugin-polyfill-corejs3": "^0.10.6",
+    "husky": "^9.1.6",
     "tsx": "^4.19.1",
     "vite": "^5.4.8",
     "vite-plugin-babel": "^1.2.0",
