--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@commitlint/config-conventional": "^19.4.0",
     "@commitlint/prompt-cli": "19.4.1",
     "@commitlint/types": "^19.4.0",
+    "@release-it/conventional-changelog": "^9.0.0",
     "babel-plugin-polyfill-corejs3": "^0.10.6",
     "husky": "^9.1.6",
     "release-it": "^17.10.0",
