chore: test release flow

--- a/.release-it.json
+++ b/.release-it.json
@@ -8,5 +8,8 @@
     "git": {
         "commitMessage": "chore: release ${version}",
         "tagName": "v${version}"
+    },
+    "npm": {
+        "publish": false
     }
 }
