--- a/.release-it.json
+++ b/.release-it.json
@@ -1,7 +1,8 @@
 {
     "plugins": {
         "@release-it/conventional-changelog": {
-            "preset": "angular",
+            "preset": "conventionalcommits",
+            "header": "# Changelog",
             "infile": "CHANGELOG.md"
         }
     },
