--- a/package.json
+++ b/package.json
@@ -72,5 +72,10 @@
     "vite-plugin-babel": "^1.2.0",
     "vite-plugin-dts": "^4.2.3",
     "vitest": "^2.1.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "conventional-changelog-conventionalcommits": "^8.0.0"
+    }
   }
 }
