ci: fix github release create error

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,4 +26,6 @@ jobs:
       - name: install dependencies
         run: pnpm install --frozen-lockfile
       - name: run ci release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: pnpm ci:release
