--- a/package.json
+++ b/package.json
@@ -44,18 +44,15 @@
   "module": "./dist/esm/index.mjs",
   "dependencies": {
     "@types/fs-extra": "^11.0.4",
-    "@types/uuid": "^9.0.2",
     "@types/yargs": "^17.0.33",
     "bundle-require": "^5.0.0",
-    "concurrently": "^8.2.2",
+    "chalk": "^5.3.0",
     "core-js-pure": "^3.38.1",
-    "detect-indent": "^7.0.1",
-    "detect-newline": "^4.0.1",
-    "execa": "^9.4.0",
     "fs-extra": "^11.2.0",
     "radash": "^12.1.0",
+    "supports-color": "^9.4.0",
+    "tree-kill": "^1.2.2",
     "ts-essentials": "^10.0.2",
-    "uuid": "^9.0.0",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
