--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "core-js-pure": "^3.38.1",
     "fs-extra": "^11.2.0",
     "radash": "^12.1.0",
+    "spawn-command": "^1.0.0",
     "supports-color": "^9.4.0",
     "tree-kill": "^1.2.2",
     "ts-essentials": "^10.0.2",
