--- a/package.json
+++ b/package.json
@@ -1,83 +1,58 @@
 {
-  "name": "parallel-wait-run",
-  "version": "0.2.2",
+  "name": "@deepgis/parallel-wait-run",
+  "version": "0.0.0",
   "description": "parallel-wait-run",
+  "keywords": [
+    "parallel",
+    "task",
+    "runner"
+  ],
+  "homepage": "https://github.com/me9rez/parallel-wait-run",
+  "repository": "https://github.com/me9rez/parallel-wait-run",
+  "license": "MIT",
+  "author": "me9rez",
   "type": "module",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.mjs"
+      },
+      "require": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.cjs"
+      }
+    }
+  },
+  "bin": {
+    "parallel": "./bin/bin.mjs"
+  },
   "files": [
     "dist",
     "bin"
   ],
-  "license": "MIT",
-  "author": "LiuWenXing1996 lwx_redstone@163.com",
-  "keywords": [
-    "parallel"
-  ],
-  "bin": {
-    "parallel": "./bin/bin.mjs"
-  },
-  "repository": "https://github.com/LiuWenXing1996/parallel-wait-run",
-  "homepage": "https://github.com/LiuWenXing1996/parallel-wait-run",
   "scripts": {
-    "build": "vite build",
-    "dev": "vite build -w",
-    "release": "release-it && pnpm build && pnpm publish",
-    "ci:release": "release-it --ci && pnpm build && pnpm publish",
-    "test": "vitest",
-    "test-watch": " vitest -w",
-    "test-read": "tsx ./src/cli",
-    "commit": "commit",
-    "preinstall": "npx only-allow pnpm",
-    "prepare": "husky"
+    "build": "bunchee",
+    "prepublishOnly": "pnpm run build",
+    "release": "release-it",
+    "test": "vitest"
   },
-  "exports": {
-    ".": {
-      "import": {
-        "types": "./dist/types/index.d.ts",
-        "default": "./dist/esm/index.mjs"
-      },
-      "require": {
-        "types": "./dist/types/index.d.ts",
-        "default": "./dist/cjs/index.cjs"
-      }
-    }
-  },
-  "types": "./dist/types/index.d.ts",
-  "main": "./dist/cjs/index.cjs",
-  "module": "./dist/esm/index.mjs",
   "dependencies": {
-    "@types/fs-extra": "^11.0.4",
-    "@types/yargs": "^17.0.33",
-    "bundle-require": "^5.0.0",
-    "chalk": "^5.3.0",
-    "core-js-pure": "^3.38.1",
-    "fs-extra": "^11.2.0",
+    "bundle-require": "^5.1.0",
+    "chalk": "^5.4.1",
+    "fs-extra": "^11.3.0",
     "radash": "^12.1.0",
     "spawn-command": "^1.0.0",
-    "supports-color": "^9.4.0",
-    "tree-kill": "^1.2.2",
-    "ts-essentials": "^10.0.2",
+    "supports-color": "^10.0.0",
+    "ts-essentials": "^10.0.4",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.25.7",
-    "@commitlint/cli": "^19.4.0",
-    "@commitlint/config-conventional": "^19.4.0",
-    "@commitlint/prompt-cli": "19.4.1",
-    "@commitlint/types": "^19.4.0",
-    "@release-it/conventional-changelog": "^9.0.0",
-    "babel-plugin-polyfill-corejs3": "^0.10.6",
-    "husky": "^9.1.6",
-    "release-it": "^17.10.0",
-    "release-it-pnpm": "^4.6.3",
-    "tsx": "^4.19.1",
-    "vite": "^5.4.8",
-    "vite-plugin-babel": "^1.2.0",
-    "vite-plugin-dts": "^4.2.3",
-    "vitest": "^2.1.2"
-  },
-  "pnpm": {
-    "overrides": {
-      "conventional-changelog-conventionalcommits": "^8.0.0"
-    }
+    "@types/fs-extra": "^11.0.4",
+    "@types/yargs": "^17.0.33",
+    "bunchee": "^6.4.0",
+    "release-it": "^18.1.2",
+    "tsx": "^4.19.3",
+    "vitest": "^3.0.8"
   }
 }
